[gd_scene load_steps=4 format=3 uid="uid://ba3c2y8lesypk"]

[ext_resource type="Script" uid="uid://sq5xxykgvgls" path="res://common/ui/screens/daily_dashboard/daily_dashboard_row_item.gd" id="1_2spva"]
[ext_resource type="Texture2D" uid="uid://dqi0m00e1il4f" path="res://assets/2d/ui/reward-Junk.png" id="2_lwxop"]
[ext_resource type="Script" uid="uid://ku4nu4x303m8" path="res://actors/npcs/board/reward_icon_large.gd" id="2_no7fr"]

[node name="DailyDashboardRowItem" type="HBoxContainer"]
offset_right = 147.0
offset_bottom = 75.0
size_flags_horizontal = 3
theme_override_constants/separation = 50
script = ExtResource("1_2spva")

[node name="RewardIconLarge" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lwxop")
stretch_mode = 2
script = ExtResource("2_no7fr")
metadata/_custom_type_script = "uid://ku4nu4x303m8"

[node name="RewardLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Materials"

[node name="CountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 2
